tests/NormalTests/paczka2/big_fuzzy/30411104.err
Error in line 2: V2Aw4CCuI9 A870 98,7
Error in line 12: pYVT8wRjebY A951 78,9
Error in line 18: y8c A149 12,7
Error in line 8: wWRZGz8CQ A911 22,7
Error in line 30: wWRZGz8CQ A911 47,28
Error in line 21: wWRZGz8CQ A951 52,9
Error in line 31: F7z2X A951 106,2
Error in line 42: F7z2X A149 50,4
Error in line 43: y8c A911 19,5
Error in line 56: A149 A149 2,1
Error in line 64: kDIGXSvl8 A911 74,8
Error in line 79: y8c A911 66,3
Error in line 82: y8c A149 32,9
Error in line 57: pYVT8wRjebY A951 60,5
Error in line 103: y8c A149 39,4
Error in line 99: V2Aw4CCuI9 A870 159,3
Error in line 115: kDIGXSvl8 A951 96,0
Error in line 122: kDIGXSvl8 A149 14,4
Error in line 127: y8c A911 52,9
Error in line 129: pYVT8wRjebY A870 29,0
Error in line 136: wWRZGz8CQ A149 82,5
Error in line 134: V2Aw4CCuI9 A911 68,4
Error in line 142: V2Aw4CCuI9 A149 33,1
Error in line 149: A149 A149 10,01
Error in line 143: V2Aw4CCuI9 A951 85,3
Error in line 145: wWRZGz8CQ A870 90,1
Error in line 146: y8c A149 29,8
Error in line 153: y8c A951 76,0
Error in line 151: V2Aw4CCuI9 A870 89,6
Error in line 165: wWRZGz8CQ A951 57,5
Error in line 167: wWRZGz8CQ A870 79,7
Error in line 169: wWRZGz8CQ A951 77,5
Error in line 192: wWRZGz8CQ A870 89,6
Error in line 195: V2Aw4CCuI9 A149 75,1
Error in line 211: wWRZGz8CQ A149 25,2
Error in line 203: F7z2X A911 73,6
Error in line 218: F7z2X A951 2,9
Error in line 220: F7z2X A911 38,2
Error in line 235: V2Aw4CCuI9 A870 -3,6
Error in line 230: pYVT8wRjebY A149 5,5
Error in line 231: F7z2X A149 44,9
